// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditorFooter snapshots Save Failed, error message raised 1`] = `
<div
  className="editor-footer mt-auto"
>
  <Toast
    onClose={[MockFunction nullMethod]}
    show={true}
  >
    <FormattedMessage
      defaultMessage="Error: Content save failed. Try again later."
      description="Error message displayed when content fails to save."
      id="authoring.editorfooter.save.error"
    />
  </Toast>
  <Component>
    <ActionRow>
      <Component />
      <Button
        aria-label="Discard Changes and Return to Learning Context"
        onClick={
          Object {
            "handleCancelClicked": Object {
              "returnUrl": "hocuspocus.ca",
            },
          }
        }
        variant="tertiary"
      >
        Cancel
      </Button>
      <Button
        aria-label="Save Changes and Return to Learning Context"
        disabled={false}
        onClick={
          Object {
            "handleSaveClicked": Object {
              "editorRef": [MockFunction args.editorRef],
              "returnUrl": "hocuspocus.ca",
              "saveBlock": [MockFunction args.saveBlock],
            },
          }
        }
      >
        <FormattedMessage
          defaultMessage="Save"
          description="Label for Save button"
          id="authoring.editorfooter.savebutton.label"
        />
      </Button>
    </ActionRow>
  </Component>
</div>
`;

exports[`EditorFooter snapshots not intialized, Spinner appears and button is disabled 1`] = `
<div
  className="editor-footer mt-auto"
>
  <Component>
    <ActionRow>
      <Component />
      <Button
        aria-label="Discard Changes and Return to Learning Context"
        onClick={
          Object {
            "handleCancelClicked": Object {
              "returnUrl": "hocuspocus.ca",
            },
          }
        }
        variant="tertiary"
      >
        Cancel
      </Button>
      <Button
        aria-label="Save Changes and Return to Learning Context"
        disabled={true}
        onClick={
          Object {
            "handleSaveClicked": Object {
              "editorRef": [MockFunction args.editorRef],
              "returnUrl": "hocuspocus.ca",
              "saveBlock": [MockFunction args.saveBlock],
            },
          }
        }
      >
        <Spinner
          animation="border"
          className="mr-3"
        />
      </Button>
    </ActionRow>
  </Component>
</div>
`;

exports[`EditorFooter snapshots renders as expected with default behavior 1`] = `
<div
  className="editor-footer mt-auto"
>
  <Component>
    <ActionRow>
      <Component />
      <Button
        aria-label="Discard Changes and Return to Learning Context"
        onClick={
          Object {
            "handleCancelClicked": Object {
              "returnUrl": "hocuspocus.ca",
            },
          }
        }
        variant="tertiary"
      >
        Cancel
      </Button>
      <Button
        aria-label="Save Changes and Return to Learning Context"
        disabled={false}
        onClick={
          Object {
            "handleSaveClicked": Object {
              "editorRef": [MockFunction args.editorRef],
              "returnUrl": "hocuspocus.ca",
              "saveBlock": [MockFunction args.saveBlock],
            },
          }
        }
      >
        <FormattedMessage
          defaultMessage="Save"
          description="Label for Save button"
          id="authoring.editorfooter.savebutton.label"
        />
      </Button>
    </ActionRow>
  </Component>
</div>
`;
